update 22/10